tests/negative/gold/bad-arguments-super-test.gold
tests/negative/bad-arguments-super-test.toit:13:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/bad-arguments-super-test.toit:12:5: error: Argument mismatch for 'B.foo'
Too few arguments provided
  b.foo
    ^~~
Compilation failed
